# detail-renderer

./: .gitignore  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
drizzle/: 0000_tiny_victor_mancha.sql  0001_curious_vargas.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
files/logs/: Planetary Gear Assembly.txt
files/train/: labels.cache
files/train/labels/: tBase_Cap~1.txt  tBase_Cap~13.txt  tBase_Cap~2.txt  tBase_Cap~20.txt  tBase_Cap~22.txt  tBase_Cap~25.txt  tBase_Cap~26.txt  tBase_Cap~27.txt  tBase_Cap~28.txt  tBase_Cap~32.txt  tBase_Cap~34.txt  tBase_Cap~57.txt  tBase_Cap~59.txt  tBase_Cap~61.txt  tBase~13.txt  tBase~31.txt  tBase~32.txt  tBase~34.txt  tBase~46.txt  tBase~5.txt  tBase~53.txt  tBase~58.txt  tBase~62.txt  tBase~63.txt  tC_Clamp1~0.txt  tC_Clamp1~1.txt  tC_Clamp1~17.txt  tC_Clamp1~21.txt  tC_Clamp1~27.txt  tC_Clamp1~42.txt  tC_Clamp1~44.txt  tC_Clamp1~45.txt  tC_Clamp1~54.txt  tC_Clamp1~55.txt  tC_Clamp1~58.txt  tC_Clamp1~6.txt  tC_Clamp1~62.txt  tPlanet_Gear_Carrier_Rod~24.txt  tPlanet_Gear_Carrier~16.txt  tPlanet_Gear_Carrier~17.txt  (+1535 more)
files/valid/: labels.cache
files/valid/labels/: vBase_Cap~1.txt  vBase_Cap~11.txt  vBase_Cap~14.txt  vBase_Cap~16.txt  vBase_Cap~18.txt  vBase_Cap~19.txt  vBase_Cap~2.txt  vBase_Cap~20.txt  vBase_Cap~21.txt  vBase_Cap~23.txt  (+353 more)
objectTracking/: classes.txt  main.py  tracker.py
objectTracking/train/: config.yaml  train.py
src/lib/: state.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
static/: gear-transformed.glb  gear.glb
(+8 files in other folders)
